manifests/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: norn-api
  namespace: norn
spec:
  selector:
    app: norn-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: norn-web
  namespace: norn
spec:
  selector:
    app: norn-web
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
